FIX Hero spacing in iphone

--- a/styles/components/career.scss
+++ b/styles/components/career.scss
@@ -2,7 +2,9 @@
   background-color: $black-primary;
   display: flex;
   justify-content: center;
+  box-sizing: border-box;
   .container {
+    box-sizing: border-box;
     bottom: -40px;
     display: flex;
     justify-content: center;
