--- a/styles/components/hero.scss
+++ b/styles/components/hero.scss
@@ -14,9 +14,6 @@
     }
     .info-section {
       flex: 1;
-      @include mobile {
-        margin: 0 auto;
-      }
       .modality {
         color: $gray-light;
         font-size: 20px;
@@ -35,7 +32,7 @@
         margin-top: 20px;
         width: 350px;
         @include mobile {
-          width: 270px;
+          width: 100%;
           margin-top: 10px;
         }
       }
@@ -60,6 +57,9 @@
         max-width: 450px;
         span {
           color: $cyan;
+        }
+        @include mobile {
+          max-width: 100%;
         }
       }
       .buttons {
@@ -111,10 +111,10 @@
     }
     .image-section {
       display: flex;
-      // flex: 1;
+      flex: 1;
       justify-content: flex-end;
       @include mobile {
-        // justify-content: center;
+        display: block;
         margin: auto;
       }
       .image {
